Fix typo (missing colon)

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1171,7 +1171,7 @@ can be interpreted on a machine where the files are located at a different absol
 <li class="li ol-li loose-li" data-line="30;document\CoreFormat.mdk:129">
 <p data-line="30;document\CoreFormat.mdk:129"><span data-line="30;document\CoreFormat.mdk:129"></span>Determinism: A log file that uses URI base id properties has a better chance of being
 <span data-line="30;document\CoreFormat.mdk:130"></span>&#8220;deterministic&#8221;<span data-line="30;document\CoreFormat.mdk:130"></span>; that is, of being identical from run to run if none of its inputs have changed,
-even if those runs occur on machines where the files are located at a different absolute location.
+even if those runs occur on machines where the files are located at different absolute locations.
 </p></li>
 <li class="li ol-li loose-li" data-line="30;document\CoreFormat.mdk:133">
 <p data-line="30;document\CoreFormat.mdk:133"><span data-line="30;document\CoreFormat.mdk:133"></span>Security: The use of URI base id properties avoids the persistence of absolute path names
@@ -1198,7 +1198,7 @@ sequence of Unicode code points.
 </p><h3 id="fileformat-datetime"  data-line="30;document\CoreFormat.mdk:160"  style="bookmark:6.5.&#8194;Date/time properties"><span data-line="30;document\CoreFormat.mdk:160"></span><span class="heading-before"><span class="heading-label">6.5</span>.&#8194;</span><span data-line="30;document\CoreFormat.mdk:160"></span>Date/time properties</h3>
 <p data-line="30;document\CoreFormat.mdk:162"><span data-line="30;document\CoreFormat.mdk:162"></span>Certain properties in this specification specify a date and time.
 The value of every such property, if present, shall be a string in the following format,
-which is compatible with<span data-line="30;document\CoreFormat.mdk:164"></span>&nbsp;<a href="http://www.iso.org/iso/catalogue_detail?csnumber=40874">ISO-8601:2004</a><span data-line="30;document\CoreFormat.mdk:164"></span>
+which is compatible with<span data-line="30;document\CoreFormat.mdk:164"></span>&nbsp;<a href="http://www.iso.org/iso/catalogue_detail?csnumber=40874">ISO-8601:2004</a><span data-line="30;document\CoreFormat.mdk:164"></span>:
 </p>
 <pre class="para-block pre-fenced pre-fenced3" data-line="30;document\CoreFormat.mdk:166" data-line-code="30;document\CoreFormat.mdk:167"><code data-line="30;document\CoreFormat.mdk:167">&lt;dateTime&gt;: &lt;date&gt;T&lt;time&gt;Z
 
