Minor improvements to Defnitions

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -872,7 +872,7 @@ others verify conventions in use in a particular team or organization.
 <p data-line="24;document\Definitions.mdk:52"><span data-line="24;document\Definitions.mdk:52"></span>Information that describes a rule
 </p></dd>
 <dd class="dd" data-line="24;document\Definitions.mdk:54" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:54"><span data-line="24;document\Definitions.mdk:54"></span>Example: Category (for example, <span data-line="24;document\Definitions.mdk:54"></span>&#8220;Style&#8221;<span data-line="24;document\Definitions.mdk:54"></span> or <span data-line="24;document\Definitions.mdk:54"></span>&#8220;Security&#8221;<span data-line="24;document\Definitions.mdk:54"></span>), documentation URL 
+<p data-line="24;document\Definitions.mdk:54"><span data-line="24;document\Definitions.mdk:54"></span>Example: Category (for example, <span data-line="24;document\Definitions.mdk:54"></span>&#8220;Style&#8221;<span data-line="24;document\Definitions.mdk:54"></span> or <span data-line="24;document\Definitions.mdk:54"></span>&#8220;Security&#8221;<span data-line="24;document\Definitions.mdk:54"></span>), documentation URI
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">log file</dt>
 <dd class="dd" data-line="24;document\Definitions.mdk:56" style="margin-left:1.5em">
@@ -881,7 +881,7 @@ others verify conventions in use in a particular team or organization.
 <dt class="dt dl-li loose-li" style="font-weight:bold">run</dt>
 <dd class="dd" data-line="24;document\Definitions.mdk:59" style="margin-left:1.5em">
 <ol class="ol compact" data-line="24;document\Definitions.mdk:59">
-<li class="li ol-li compact-li" data-line="24;document\Definitions.mdk:59"><span data-line="24;document\Definitions.mdk:59"></span>invocation of a specified set of static analysis tools on a specified version of a specified set of analysis targets,
+<li class="li ol-li compact-li" data-line="24;document\Definitions.mdk:59"><span data-line="24;document\Definitions.mdk:59"></span>invocation of a specified static analysis tool on a specified version of a specified set of analysis targets,
 with a specified set of runtime parameters
 </li></ol></dd>
 <dd class="dd" data-line="24;document\Definitions.mdk:62" style="margin-left:1.5em">
@@ -899,7 +899,7 @@ with a specified set of runtime parameters
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">false positive</dt>
 <dd class="dd" data-line="24;document\Definitions.mdk:70" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:70"><span data-line="24;document\Definitions.mdk:70"></span>result which an end user decides does not actually represent a problem in the analysis target
+<p data-line="24;document\Definitions.mdk:70"><span data-line="24;document\Definitions.mdk:70"></span>result which an end user decides does not actually represent a problem
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">(result log) viewer</dt>
 <dd class="dd" data-line="24;document\Definitions.mdk:73" style="margin-left:1.5em">
