Fix up obsolete definitions and mentions of obsolete properties

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -943,78 +943,74 @@ even if the programming artifact in which it occurs is modified
 <dd class="dd" data-line="24;document\Definitions.mdk:100" style="margin-left:1.5em">
 <p data-line="24;document\Definitions.mdk:100"><span data-line="24;document\Definitions.mdk:100"></span>Example: <span data-line="24;document\Definitions.mdk:100"></span><code class="code code1">camelCase</code><span data-line="24;document\Definitions.mdk:100"></span>, <span data-line="24;document\Definitions.mdk:100"></span><code class="code code1">version</code><span data-line="24;document\Definitions.mdk:100"></span>, <span data-line="24;document\Definitions.mdk:100"></span><code class="code code1">fullName</code><span data-line="24;document\Definitions.mdk:100"></span>.
 </p></dd>
-<dt class="dt dl-li loose-li" style="font-weight:bold">tag set</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:102" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:102"><span data-line="24;document\Definitions.mdk:102"></span>a JSON array containing zero or more arbitrary strings, no two of which are the same
-</p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">property bag</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:105" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:105"><span data-line="24;document\Definitions.mdk:105"></span>a JSON object consisting of a set of name/value pairs with arbitrary camelCase names
+<dd class="dd" data-line="24;document\Definitions.mdk:102" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:102"><span data-line="24;document\Definitions.mdk:102"></span>a JSON object consisting of a set of name/value pairs with arbitrary camelCase names
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">newline sequence</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:108" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:108"><span data-line="24;document\Definitions.mdk:108"></span>sequence of one or more characters representing the end of a line of text
+<dd class="dd" data-line="24;document\Definitions.mdk:105" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:105"><span data-line="24;document\Definitions.mdk:105"></span>sequence of one or more characters representing the end of a line of text
 </p></dd>
-<dd class="dd" data-line="24;document\Definitions.mdk:110" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:110"><span data-line="24;document\Definitions.mdk:110"></span>Note: Some systems represent a newline sequence with a single newline character; others represent it as a carriage return character followed by a newline character.
+<dd class="dd" data-line="24;document\Definitions.mdk:107" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:107"><span data-line="24;document\Definitions.mdk:107"></span>Note: Some systems represent a newline sequence with a single newline character; others represent it as a carriage return character followed by a newline character.
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">text file</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:112" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:112"><span data-line="24;document\Definitions.mdk:112"></span>file considered as a sequence of characters organized into lines and columns
+<dd class="dd" data-line="24;document\Definitions.mdk:109" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:109"><span data-line="24;document\Definitions.mdk:109"></span>file considered as a sequence of characters organized into lines and columns
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">line</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:115" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:115"><span data-line="24;document\Definitions.mdk:115"></span>contiguous sequence of characters, starting either at the beginning of a file
+<dd class="dd" data-line="24;document\Definitions.mdk:112" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:112"><span data-line="24;document\Definitions.mdk:112"></span>contiguous sequence of characters, starting either at the beginning of a file
 or immediately after a newline sequence, and ending at and including the nearest subsequent newline sequence,
 if one is present, or else extending to the end of the file
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">column</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:120" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:120"><span data-line="24;document\Definitions.mdk:120"></span>1-based index of a character within a line
+<dd class="dd" data-line="24;document\Definitions.mdk:117" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:117"><span data-line="24;document\Definitions.mdk:117"></span>1-based index of a character within a line
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">binary file</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:123" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:123"><span data-line="24;document\Definitions.mdk:123"></span>file considered as a sequence of bytes
+<dd class="dd" data-line="24;document\Definitions.mdk:120" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:120"><span data-line="24;document\Definitions.mdk:120"></span>file considered as a sequence of bytes
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">region</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:126" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:126"><span data-line="24;document\Definitions.mdk:126"></span>contiguous portion of a file
+<dd class="dd" data-line="24;document\Definitions.mdk:123" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:123"><span data-line="24;document\Definitions.mdk:123"></span>contiguous portion of a file
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">text region</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:129" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:129"><span data-line="24;document\Definitions.mdk:129"></span>region representing a contiguous range of zero or more character in a text file
+<dd class="dd" data-line="24;document\Definitions.mdk:126" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:126"><span data-line="24;document\Definitions.mdk:126"></span>region representing a contiguous range of zero or more character in a text file
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">binary region</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:132" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:132"><span data-line="24;document\Definitions.mdk:132"></span>region representing a contiguous range of zero or more bytes in a binary file
+<dd class="dd" data-line="24;document\Definitions.mdk:129" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:129"><span data-line="24;document\Definitions.mdk:129"></span>region representing a contiguous range of zero or more bytes in a binary file
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">physical location</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:135" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:135"><span data-line="24;document\Definitions.mdk:135"></span>location specified by reference to a programming artifact together with a range of bytes or characters within that artifact
+<dd class="dd" data-line="24;document\Definitions.mdk:132" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:132"><span data-line="24;document\Definitions.mdk:132"></span>location specified by reference to a programming artifact together with a range of bytes or characters within that artifact
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">logical location</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:138" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:138"><span data-line="24;document\Definitions.mdk:138"></span>location specified by reference to a programmatic construct, without specifying the programming artifact within which that construct occurs
+<dd class="dd" data-line="24;document\Definitions.mdk:135" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:135"><span data-line="24;document\Definitions.mdk:135"></span>location specified by reference to a programmatic construct, without specifying the programming artifact within which that construct occurs
 </p></dd>
-<dd class="dd" data-line="24;document\Definitions.mdk:140" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:140"><span data-line="24;document\Definitions.mdk:140"></span>Example: A class name, a method name, a namespace.
+<dd class="dd" data-line="24;document\Definitions.mdk:137" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:137"><span data-line="24;document\Definitions.mdk:137"></span>Example: A class name, a method name, a namespace.
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">empty array</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:142" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:142"><span data-line="24;document\Definitions.mdk:142"></span>array that contains no elements, and so has a length of 0
+<dd class="dd" data-line="24;document\Definitions.mdk:139" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:139"><span data-line="24;document\Definitions.mdk:139"></span>array that contains no elements, and so has a length of 0
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">empty string</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:145" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:145"><span data-line="24;document\Definitions.mdk:145"></span>string that contains no characters, and so has a length of 0
+<dd class="dd" data-line="24;document\Definitions.mdk:142" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:142"><span data-line="24;document\Definitions.mdk:142"></span>string that contains no characters, and so has a length of 0
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">core format</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:148" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:148"><span data-line="24;document\Definitions.mdk:148"></span>set of SARIF elements that are intended to be useful in a variety of scenarios where static analysis results
+<dd class="dd" data-line="24;document\Definitions.mdk:145" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:145"><span data-line="24;document\Definitions.mdk:145"></span>set of SARIF elements that are intended to be useful in a variety of scenarios where static analysis results
 are produced or consumed
 </p></dd>
 <dt class="dt dl-li loose-li" style="font-weight:bold">profile</dt>
-<dd class="dd" data-line="24;document\Definitions.mdk:152" style="margin-left:1.5em">
-<p data-line="24;document\Definitions.mdk:152"><span data-line="24;document\Definitions.mdk:152"></span>set of SARIF elements that are intended to be useful in a specific static analysis usage scenario
+<dd class="dd" data-line="24;document\Definitions.mdk:149" style="margin-left:1.5em">
+<p data-line="24;document\Definitions.mdk:149"><span data-line="24;document\Definitions.mdk:149"></span>set of SARIF elements that are intended to be useful in a specific static analysis usage scenario
 </p></dd></dl><h2 id="sec-conventions"  data-line="26;document\Conventions.mdk:1"  style="bookmark:4.&#8194;Conventions"><span data-line="26;document\Conventions.mdk:1"></span><span class="heading-before"><span class="heading-label">4</span>.&#8194;</span><span data-line="26;document\Conventions.mdk:1"></span>Conventions</h2><h3 id="sec-general"  data-line="26;document\Conventions.mdk:3"  style="bookmark:4.1.&#8194;General"><span data-line="26;document\Conventions.mdk:3"></span><span class="heading-before"><span class="heading-label">4.1</span>.&#8194;</span><span data-line="26;document\Conventions.mdk:3"></span>General</h3>
 <p data-line="26;document\Conventions.mdk:5"><span data-line="26;document\Conventions.mdk:5"></span>The following conventions are used within this document.
 </p><h3 id="sec-format-examples"  data-line="26;document\Conventions.mdk:7"  style="bookmark:4.2.&#8194;Format examples"><span data-line="26;document\Conventions.mdk:7"></span><span class="heading-before"><span class="heading-label">4.2</span>.&#8194;</span><span data-line="26;document\Conventions.mdk:7"></span>Format examples</h3>
@@ -1033,9 +1029,9 @@ characters such as newlines.
 <p data-line="26;document\Conventions.mdk:23"><span data-line="26;document\Conventions.mdk:23"></span>A JSON object consists of a set of name/value pairs.
 The value may itself be an object, allowing arbitrary nesting.
 When necessary for clarity or to avoid ambiguity, we use the <span data-line="26;document\Conventions.mdk:25"></span>&#8220;dot&#8221;<span data-line="26;document\Conventions.mdk:25"></span> notation to refer to nested values.
-For example, the <span data-line="26;document\Conventions.mdk:26"></span><code class="code code1">physicalLocationComponent</code><span data-line="26;document\Conventions.mdk:26"></span> object defines a property <span data-line="26;document\Conventions.mdk:26"></span><code class="code code1">region</code><span data-line="26;document\Conventions.mdk:26"></span> whose value is a <span data-line="26;document\Conventions.mdk:26"></span><code class="code code1">region</code><span data-line="26;document\Conventions.mdk:26"></span> object,
+For example, the <span data-line="26;document\Conventions.mdk:26"></span><code class="code code1">physicalLocation</code><span data-line="26;document\Conventions.mdk:26"></span> object defines a property <span data-line="26;document\Conventions.mdk:26"></span><code class="code code1">region</code><span data-line="26;document\Conventions.mdk:26"></span> whose value is a <span data-line="26;document\Conventions.mdk:26"></span><code class="code code1">region</code><span data-line="26;document\Conventions.mdk:26"></span> object,
 which in turn contains a <span data-line="26;document\Conventions.mdk:27"></span><code class="code code1">length</code><span data-line="26;document\Conventions.mdk:27"></span> property.
-For clarity, we can refer to the <span data-line="26;document\Conventions.mdk:28"></span><code class="code code1">length</code><span data-line="26;document\Conventions.mdk:28"></span> property as <span data-line="26;document\Conventions.mdk:28"></span><code class="code code1">physicalLocationComponent.region.length</code><span data-line="26;document\Conventions.mdk:28"></span>.
+For clarity, we can refer to the <span data-line="26;document\Conventions.mdk:28"></span><code class="code code1">length</code><span data-line="26;document\Conventions.mdk:28"></span> property as <span data-line="26;document\Conventions.mdk:28"></span><code class="code code1">physicalLocation.region.length</code><span data-line="26;document\Conventions.mdk:28"></span>.
 </p><h2 id="sec-organization"  data-line="28;document\Organization.mdk:1"  style="bookmark:5.&#8194;Organization"><span data-line="28;document\Organization.mdk:1"></span><span class="heading-before"><span class="heading-label">5</span>.&#8194;</span><span data-line="28;document\Organization.mdk:1"></span>Organization</h2>
 <p data-line="28;document\Organization.mdk:3"><span data-line="28;document\Organization.mdk:3"></span>SARIF is divided into a core format and a set of profiles.
 </p>
@@ -3335,10 +3331,10 @@ then the viewer needs to know the file type of the container so that it can extr
 </p></li></ol>
 
 <p data-line="36;document\AnnexB.mdk:19"><span data-line="36;document\AnnexB.mdk:19"></span>There are various ways that a viewer might obtain file type information.
-In the SARIF format, the <span data-line="36;document\AnnexB.mdk:20"></span><code class="code code1">mimeType</code><span data-line="36;document\AnnexB.mdk:20"></span> property of the <span data-line="36;document\AnnexB.mdk:20"></span><code class="code code1">physicalLocationComponent</code><span data-line="36;document\AnnexB.mdk:20"></span> object provides this information.
+In the SARIF format, the <span data-line="36;document\AnnexB.mdk:20"></span><code class="code code1">mimeType</code><span data-line="36;document\AnnexB.mdk:20"></span> property of the <span data-line="36;document\AnnexB.mdk:20"></span><code class="code code1">file</code><span data-line="36;document\AnnexB.mdk:20"></span> object provides this information.
 In the absence of the <span data-line="36;document\AnnexB.mdk:21"></span><code class="code code1">mimeType</code><span data-line="36;document\AnnexB.mdk:21"></span> property, a viewer can fall back to examining the filename extension, for example <span data-line="36;document\AnnexB.mdk:21"></span>&#8220;<code class="code code1">.zip</code>&#8221;<span data-line="36;document\AnnexB.mdk:21"></span>.
 It is recommended that the analysis tool provide the <span data-line="36;document\AnnexB.mdk:22"></span><code class="code code1">mimeType</code><span data-line="36;document\AnnexB.mdk:22"></span> property
-(which it must know, because it was able to interpret the file in which it produced the result),
+(which it must know, because it was able to interpret the file in which it detected the result),
 rather than forcing the viewer to rely on a file name extension.
 </p><h2 id="annex-c"  data-line="38;document\AnnexC.mdk:1"  style="bookmark:Annex C (informative) Production of SARIF by converters"><span data-line="38;document\AnnexC.mdk:1"></span>Annex C (informative) Production of SARIF by converters</h2>
 <div class="isonote block" data-line="38;document\AnnexC.mdk:3" style="font-size:small">
