Remove incorrect reference to "absolute" URI

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1389,7 +1389,7 @@ A file that is not nested within another file is referred to as a <span data-lin
 A file that is nested withing another file is referred to as a <span data-line="32;document\CoreFormat.mdk:397"></span>&#8220;nested file&#8221;<span data-line="32;document\CoreFormat.mdk:397"></span>.
 </p>
 <p class="indent" data-line="32;document\CoreFormat.mdk:399"><span data-line="32;document\CoreFormat.mdk:399"></span>If the scanned file is a nested file,
-then the property name shall be the absolute URI of the outermost parent,
+then the property name shall be the URI of the outermost parent,
 together with a fragment that describes the nesting of the scanned file within
 its parent or parents.
 </p>
