--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -731,6 +731,7 @@ body.madoko.preview {
 <div class="tocitem"  ><a href="#annex-b" class="localref">Annex B (informative) Use of SARIF by result log viewers</a></div>
 <div class="tocitem"  ><a href="#annex-c" class="localref">Annex C (informative) Production of SARIF by converters</a></div>
 <div class="tocitem"  ><a href="#annex-d" class="localref">Annex D (informative) Locating rule metadata</a></div>
+<div class="tocitem"  ><a href="#annex-e" class="localref">Annex E (informative) Producing deterministic SARIF log files</a></div>
 <div class="tocitem"  ><a href="#sec-bibliography" class="localref">Bibliography</a></div></div></nav><h2 id="sec-introduction"  data-line="20;document\Introduction.mdk:1"  style="bookmark:Introduction"><span data-line="20;document\Introduction.mdk:1"></span>Introduction</h2>
 <p data-line="20;document\Introduction.mdk:3"><span data-line="20;document\Introduction.mdk:3"></span>Software developers use a variety of analysis tools to assess the quality of their programs.
 These tools report results which can indicate problems related to program qualities such as correctness, security,
@@ -3605,21 +3606,93 @@ a service from which rule metadata can be obtained (for example, a result manage
 or a web service dedicated to rule metadata), then tooling can be created to merge
 a log file with the relevant metadata when required (for example, when presenting the
 results in a log file viewer).
-</p><h2 id="sec-bibliography"  data-line="40;document\Bibliography.mdk:1"  style="bookmark:Bibliography"><span data-line="40;document\Bibliography.mdk:1"></span>Bibliography</h2>
-<p data-line="40;document\Bibliography.mdk:3"><span data-line="40;document\Bibliography.mdk:3"></span>ISO/IEC 9899, <span data-line="40;document\Bibliography.mdk:3"></span><em>Information technology - Programming languages – C</em><span data-line="40;document\Bibliography.mdk:3"></span>
+</p><h2 id="annex-e"  data-line="40;document\AnnexE-Determinism:1"  style="bookmark:Annex E (informative) Producing deterministic SARIF log files"><span data-line="40;document\AnnexE-Determinism:1"></span>Annex E (informative) Producing deterministic SARIF log files</h2>
+<p data-line="40;document\AnnexE-Determinism:3"><span data-line="40;document\AnnexE-Determinism:3"></span>In certain circumstances, it is desirable for an analysis tool to produce deterministic output;
+that is, for it to produce identical output when run repeatedly over identical inputs.
 </p>
-<p class="indent" data-line="40;document\Bibliography.mdk:5"><span data-line="40;document\Bibliography.mdk:5"></span>ISO/IEC 14882, <span data-line="40;document\Bibliography.mdk:5"></span><em>Information technology - Programming languages - C++</em><span data-line="40;document\Bibliography.mdk:5"></span>
+<p class="indent" data-line="40;document\AnnexE-Determinism:6"><span data-line="40;document\AnnexE-Determinism:6"></span>Certain build systems provide an example of when this is desirable.
+Consider a build system that caches the results of each build step.
+If the build is rerun, and the inputs to the step are identical
+(which the build system might determine, for example, by comparing timestamps,
+or by computing a hash of the inputs to the step and storing it along with the output from the step),
+then the build system can save time by not re-running the step, and simply
+using the existing outputs.
 </p>
-<p class="indent" data-line="40;document\Bibliography.mdk:7"><span data-line="40;document\Bibliography.mdk:7"></span>ISO/IEC 23270, <span data-line="40;document\Bibliography.mdk:7"></span><em>Information technology - Programming languages - C#</em><span data-line="40;document\Bibliography.mdk:7"></span>
+<p class="indent" data-line="40;document\AnnexE-Determinism:14"><span data-line="40;document\AnnexE-Determinism:14"></span>In the case of SARIF, one could imagine a sequence of build steps where Steps A
+B, and C each run an analysis tool on a different set of targets, producing log files
+A.sarif, B.sarif, and C.sarif, and then build Step D performs an analysis on the aggregate
+of those log files. If the targets analyzed in Step B change
+but the targets analyzed in steps A and C do not, and if the contents of the
+SARIF log file are deterministic, then when the build is re-run, only Steps B and D
+need be performed.
 </p>
-<p class="indent" data-line="40;document\Bibliography.mdk:9"><span data-line="40;document\Bibliography.mdk:9"></span>RFC 2045, <span data-line="40;document\Bibliography.mdk:9"></span><em>Multipurpose Internet Mail Extensions (MIME) Part One: Format of Internet Message Bodies</em><span data-line="40;document\Bibliography.mdk:9"></span>.
-Available from <span data-line="40;document\Bibliography.mdk:10"></span>&#60;<span data-line="40;document\Bibliography.mdk:10"></span><a href="https://tools.ietf.org/html/rfc2045">https://tools.ietf.org/html/rfc2045</a><span data-line="40;document\Bibliography.mdk:10"></span>&#62;<span data-line="40;document\Bibliography.mdk:10"></span>
+<p class="indent para-continue" data-line="40;document\AnnexE-Determinism:22"><span data-line="40;document\AnnexE-Determinism:22"></span>If it is desired to produce deterministic output, the following elements of the SARIF format
+should not be used. All of these elements are optional in the format:
 </p>
-<p class="indent" data-line="40;document\Bibliography.mdk:12"><span data-line="40;document\Bibliography.mdk:12"></span>RFC 3066, <span data-line="40;document\Bibliography.mdk:12"></span><em>Tags for the Identification of Languages</em><span data-line="40;document\Bibliography.mdk:12"></span>.
-Available from <span data-line="40;document\Bibliography.mdk:13"></span>&#60;<span data-line="40;document\Bibliography.mdk:13"></span><a href="https://www.ietf.org/rfc/rfc3066.txt">https://www.ietf.org/rfc/rfc3066.txt</a><span data-line="40;document\Bibliography.mdk:13"></span>&#62;<span data-line="40;document\Bibliography.mdk:13"></span>
+<ul class="ul list-star compact" data-line="40;document\AnnexE-Determinism:25">
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:25"><span data-line="40;document\AnnexE-Determinism:25"></span><code class="code code1">invocation.startTime</code><span data-line="40;document\AnnexE-Determinism:25"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:26"><span data-line="40;document\AnnexE-Determinism:26"></span><code class="code code1">invocation.endTime</code><span data-line="40;document\AnnexE-Determinism:26"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:27"><span data-line="40;document\AnnexE-Determinism:27"></span><code class="code code1">invocation.processId</code><span data-line="40;document\AnnexE-Determinism:27"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:28"><span data-line="40;document\AnnexE-Determinism:28"></span><code class="code code1">invocation.machine</code><span data-line="40;document\AnnexE-Determinism:28"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:29"><span data-line="40;document\AnnexE-Determinism:29"></span><code class="code code1">invocation.account</code><span data-line="40;document\AnnexE-Determinism:29"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:30"><span data-line="40;document\AnnexE-Determinism:30"></span><code class="code code1">invocation.fileName</code><span data-line="40;document\AnnexE-Determinism:30"></span> (because <span data-line="40;document\AnnexE-Determinism:30"></span><code class="code code1">fileName</code><span data-line="40;document\AnnexE-Determinism:30"></span> is specified as being an absolute path, and
+tools might be stored in different directories on different machines)
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:32"><span data-line="40;document\AnnexE-Determinism:32"></span><code class="code code1">invocation.workingDirectory</code><span data-line="40;document\AnnexE-Determinism:32"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:33"><span data-line="40;document\AnnexE-Determinism:33"></span><code class="code code1">invocation.environmentVariables</code><span data-line="40;document\AnnexE-Determinism:33"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:34"><span data-line="40;document\AnnexE-Determinism:34"></span>The use of absolute file paths in <span data-line="40;document\AnnexE-Determinism:34"></span><code class="code code1">invocation.commandLine</code><span data-line="40;document\AnnexE-Determinism:34"></span>
+(because builds performed on different machines might use a different root directory)
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:36"><span data-line="40;document\AnnexE-Determinism:36"></span><code class="code code1">annotatedCodeLocation.threadId</code><span data-line="40;document\AnnexE-Determinism:36"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:37"><span data-line="40;document\AnnexE-Determinism:37"></span><code class="code code1">notification.threadId</code><span data-line="40;document\AnnexE-Determinism:37"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:38"><span data-line="40;document\AnnexE-Determinism:38"></span><code class="code code1">notification.time</code><span data-line="40;document\AnnexE-Determinism:38"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:39"><span data-line="40;document\AnnexE-Determinism:39"></span><code class="code code1">result.baselineState</code><span data-line="40;document\AnnexE-Determinism:39"></span> (because it depends on a previous run.
+A result whose <span data-line="40;document\AnnexE-Determinism:40"></span><code class="code code1">baselineState</code><span data-line="40;document\AnnexE-Determinism:40"></span> was <span data-line="40;document\AnnexE-Determinism:40"></span><code class="code code1">&quot;new&quot;</code><span data-line="40;document\AnnexE-Determinism:40"></span> in a previous run would be <span data-line="40;document\AnnexE-Determinism:40"></span><code class="code code1">&quot;existing&quot;</code><span data-line="40;document\AnnexE-Determinism:40"></span>
+in the next run.)
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:42"><span data-line="40;document\AnnexE-Determinism:42"></span><code class="code code1">run.id</code><span data-line="40;document\AnnexE-Determinism:42"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:43"><span data-line="40;document\AnnexE-Determinism:43"></span><code class="code code1">run.automationId</code><span data-line="40;document\AnnexE-Determinism:43"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:44"><span data-line="40;document\AnnexE-Determinism:44"></span><code class="code code1">run.baselineId</code><span data-line="40;document\AnnexE-Determinism:44"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:45"><span data-line="40;document\AnnexE-Determinism:45"></span><code class="code code1">stackFrame.threadId</code><span data-line="40;document\AnnexE-Determinism:45"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:46"><span data-line="40;document\AnnexE-Determinism:46"></span><code class="code code1">stackFrame.address</code><span data-line="40;document\AnnexE-Determinism:46"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:47"><span data-line="40;document\AnnexE-Determinism:47"></span>The use of absolute file paths in URI-valued properties such as <span data-line="40;document\AnnexE-Determinism:47"></span><code class="code code1">physicalLocation.uri</code><span data-line="40;document\AnnexE-Determinism:47"></span>
+</li>
+<li class="li ul-li list-star-li compact-li" data-line="40;document\AnnexE-Determinism:48"><span data-line="40;document\AnnexE-Determinism:48"></span>The presence of any non-deterministic elements in a property bag property
+</li></ul>
+
+<p data-line="40;document\AnnexE-Determinism:50"><span data-line="40;document\AnnexE-Determinism:50"></span>Authors of analysis tools are encouraged to provide a mechanism
+(for example, a command line option such as <span data-line="40;document\AnnexE-Determinism:51"></span><code class="code code1">--deterministic</code><span data-line="40;document\AnnexE-Determinism:51"></span>) which instructs the tool to
+omit non-deterministic elements from the log file.
+</p><h2 id="sec-bibliography"  data-line="42;document\Bibliography.mdk:1"  style="bookmark:Bibliography"><span data-line="42;document\Bibliography.mdk:1"></span>Bibliography</h2>
+<p data-line="42;document\Bibliography.mdk:3"><span data-line="42;document\Bibliography.mdk:3"></span>ISO/IEC 9899, <span data-line="42;document\Bibliography.mdk:3"></span><em>Information technology - Programming languages – C</em><span data-line="42;document\Bibliography.mdk:3"></span>
 </p>
-<p class="indent" data-line="40;document\Bibliography.mdk:15"><span data-line="40;document\Bibliography.mdk:15"></span>RFC 3629, <span data-line="40;document\Bibliography.mdk:15"></span><em>UTF-8, a transformation format of ISO 10646</em><span data-line="40;document\Bibliography.mdk:15"></span>.
-Available from <span data-line="40;document\Bibliography.mdk:16"></span>&#60;<span data-line="40;document\Bibliography.mdk:16"></span><a href="https://tools.ietf.org/html/rfc3629">https://tools.ietf.org/html/rfc3629</a><span data-line="40;document\Bibliography.mdk:16"></span>&#62;<span data-line="40;document\Bibliography.mdk:16"></span>
+<p class="indent" data-line="42;document\Bibliography.mdk:5"><span data-line="42;document\Bibliography.mdk:5"></span>ISO/IEC 14882, <span data-line="42;document\Bibliography.mdk:5"></span><em>Information technology - Programming languages - C++</em><span data-line="42;document\Bibliography.mdk:5"></span>
+</p>
+<p class="indent" data-line="42;document\Bibliography.mdk:7"><span data-line="42;document\Bibliography.mdk:7"></span>ISO/IEC 23270, <span data-line="42;document\Bibliography.mdk:7"></span><em>Information technology - Programming languages - C#</em><span data-line="42;document\Bibliography.mdk:7"></span>
+</p>
+<p class="indent" data-line="42;document\Bibliography.mdk:9"><span data-line="42;document\Bibliography.mdk:9"></span>RFC 2045, <span data-line="42;document\Bibliography.mdk:9"></span><em>Multipurpose Internet Mail Extensions (MIME) Part One: Format of Internet Message Bodies</em><span data-line="42;document\Bibliography.mdk:9"></span>.
+Available from <span data-line="42;document\Bibliography.mdk:10"></span>&#60;<span data-line="42;document\Bibliography.mdk:10"></span><a href="https://tools.ietf.org/html/rfc2045">https://tools.ietf.org/html/rfc2045</a><span data-line="42;document\Bibliography.mdk:10"></span>&#62;<span data-line="42;document\Bibliography.mdk:10"></span>
+</p>
+<p class="indent" data-line="42;document\Bibliography.mdk:12"><span data-line="42;document\Bibliography.mdk:12"></span>RFC 3066, <span data-line="42;document\Bibliography.mdk:12"></span><em>Tags for the Identification of Languages</em><span data-line="42;document\Bibliography.mdk:12"></span>.
+Available from <span data-line="42;document\Bibliography.mdk:13"></span>&#60;<span data-line="42;document\Bibliography.mdk:13"></span><a href="https://www.ietf.org/rfc/rfc3066.txt">https://www.ietf.org/rfc/rfc3066.txt</a><span data-line="42;document\Bibliography.mdk:13"></span>&#62;<span data-line="42;document\Bibliography.mdk:13"></span>
+</p>
+<p class="indent" data-line="42;document\Bibliography.mdk:15"><span data-line="42;document\Bibliography.mdk:15"></span>RFC 3629, <span data-line="42;document\Bibliography.mdk:15"></span><em>UTF-8, a transformation format of ISO 10646</em><span data-line="42;document\Bibliography.mdk:15"></span>.
+Available from <span data-line="42;document\Bibliography.mdk:16"></span>&#60;<span data-line="42;document\Bibliography.mdk:16"></span><a href="https://tools.ietf.org/html/rfc3629">https://tools.ietf.org/html/rfc3629</a><span data-line="42;document\Bibliography.mdk:16"></span>&#62;<span data-line="42;document\Bibliography.mdk:16"></span>
 </p><span data-line=""></span>
 </body>
 
