Add missing requirement on URI base id properties

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -3065,7 +3065,7 @@ a descriptive identifier that categorizes the annotation.
 <p data-line="30;document\FileFormat.mdk:2479"><span data-line="30;document\FileFormat.mdk:2479"></span><code class="code code1">&quot;alias&quot;</code><span data-line="30;document\FileFormat.mdk:2479"></span>: This location defines an additional name for a variable defined in a declaration.
 </p></li>
 <li class="li ul-li list-star-li loose-li" data-line="30;document\FileFormat.mdk:2481">
-<p data-line="30;document\FileFormat.mdk:2481"><span data-line="30;document\FileFormat.mdk:2481"></span>`<span data-line="30;document\FileFormat.mdk:2481"></span>&#8220;branch&#8221;<span data-line="30;document\FileFormat.mdk:2481"></span>: At this location, a branch in the execution path occurred.
+<p data-line="30;document\FileFormat.mdk:2481"><span data-line="30;document\FileFormat.mdk:2481"></span><code class="code code1">&quot;branch&quot;</code><span data-line="30;document\FileFormat.mdk:2481"></span>: At this location, a branch in the execution path occurred.
 </p></li>
 <li class="li ul-li list-star-li loose-li" data-line="30;document\FileFormat.mdk:2483">
 <p data-line="30;document\FileFormat.mdk:2483"><span data-line="30;document\FileFormat.mdk:2483"></span><code class="code code1">&quot;call&quot;</code><span data-line="30;document\FileFormat.mdk:2483"></span>: This location is the site of a function or method call.
@@ -3087,7 +3087,7 @@ between a <span data-line="30;document\FileFormat.mdk:2491"></span><code class="
 <p data-line="30;document\FileFormat.mdk:2496"><span data-line="30;document\FileFormat.mdk:2496"></span><code class="code code1">&quot;functionEnter&quot;</code><span data-line="30;document\FileFormat.mdk:2496"></span>: This location is an entry point to a function or method.
 </p></li>
 <li class="li ul-li list-star-li loose-li" data-line="30;document\FileFormat.mdk:2498">
-<p data-line="30;document\FileFormat.mdk:2498"><span data-line="30;document\FileFormat.mdk:2498"></span>`<span data-line="30;document\FileFormat.mdk:2498"></span>&#8220;functionExit&#8221;<span data-line="30;document\FileFormat.mdk:2498"></span>: This location is an exit point from a function or method (for example, a return statement).
+<p data-line="30;document\FileFormat.mdk:2498"><span data-line="30;document\FileFormat.mdk:2498"></span><code class="code code1">&quot;functionExit&quot;</code><span data-line="30;document\FileFormat.mdk:2498"></span>: This location is an exit point from a function or method (for example, a return statement).
 </p></li>
 <li class="li ul-li list-star-li loose-li" data-line="30;document\FileFormat.mdk:2500">
 <p data-line="30;document\FileFormat.mdk:2500"><span data-line="30;document\FileFormat.mdk:2500"></span><code class="code code1">&quot;sanitizer&quot;</code><span data-line="30;document\FileFormat.mdk:2500"></span>: This is the location of a statement (for example, a function call), after the execution of which data that entered the system from outside (for example, from user input)
